--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -7,3 +7,5 @@ $primaryDark: #121212;
 $secondaryDark: #262626;
 $primaryLight: #fff;
 $secondaryLight: #f3f3f3;
+$shadowDark: #4a4a4a;
+$shadowLight: #ccc;
