--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -40,6 +40,7 @@ Skills
   }
   &__skillBar {
     background-color: $primaryLight;
+    box-shadow: 2px 4px 10px $shadowDark;
     height: 1rem;
     border-radius: 0.5rem;
   }
@@ -66,6 +67,7 @@ body.light {
     }
     &__skillBar {
       background-color: $secondaryLight;
+      box-shadow: 2px 4px 10px $shadowLight;
     }
     &__skill {
       background-color: $secondary;
