--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@ Partials
 Components
 **********/
 @import './components/about';
+@import './components/experience';
 @import './components/header';
 @import './components/home';
 @import './components/navbar';
