--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -44,13 +44,13 @@ Mixins
   justify-content: $justify-content;
 }
 @mixin button($color, $border) {
-  border: 3px solid $border;
-  border-radius: 3.125rem;
+  border: 1px solid $border;
+  border-radius: 5px;
   display: inline-block;
   color: $color;
   font-size: 16px;
   text-decoration: none;
-  padding: 10px 25px;
+  padding: 10px 20px;
 }
 
 @mixin paragraph {
