--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,6 +7,7 @@ Header
   height: 4rem;
   top: 0;
   z-index: 1030;
+  box-shadow: 2px 4px 10px $shadowDark;
   &__content {
     @include flexBox($align-items: center, $justify-content: space-between);
     height: 4rem;
@@ -18,5 +19,6 @@ Light theme header
 body.light {
   & header {
     background-color: $secondaryLight;
+    box-shadow: 2px 4px 10px $shadowLight;
   }
 }
