--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -9,7 +9,6 @@ Skills
   }
   &__subtitles {
     color: $primaryLight;
-    font-size: 20px;
     margin-bottom: 1rem;
   }
   &__contentRow {
@@ -32,10 +31,10 @@ Skills
     margin-bottom: 1rem;
   }
   &__key {
-    font-size: 15px;
+    font-size: 0.938rem;
   }
   &__value {
-    font-size: 14px;
+    font-size: 0.875rem;
   }
   &__skillBar {
     background-color: $primaryLight;
