--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,3 +39,15 @@ body.light {
 section {
   padding: 5.5rem 0 1rem;
 }
+h2 {
+  font-size: 1.875rem; /*30px*/
+}
+h3 {
+  font-size: 1.375rem; /*22px*/
+}
+h4 {
+  font-size: 1.125rem; /*18px*/
+}
+h5 {
+  font-size: 0.75rem; /*14px*/
+}
