--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -40,7 +40,7 @@ About
     margin-right: 0.5rem;
   }
   &__button {
-    @include button($primaryLight, $primary);
+    @include button($primaryLight, $primary, $primaryDark);
   }
 }
 
@@ -59,7 +59,7 @@ body.light {
       color: $secondary;
     }
     &__button {
-      @include button($primaryDark, $secondary);
+      @include button($secondaryDark, $secondary, $primaryLight);
     }
   }
 }
