--- a/src/styles/base/_layouts.scss
+++ b/src/styles/base/_layouts.scss
@@ -5,6 +5,6 @@ Layouts
   max-width: 75rem; /*1200px */
   margin-right: auto;
   margin-left: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
 }
