--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -3,19 +3,32 @@ About
 **********/
 .about {
   &__content {
-    @include row();
+    @include row($margin-left: -1rem, $margin-right: -1rem);
+    @include mediaQuery(max-width, 767px) {
+      flex-direction: column;
+    }
   }
   &__contentPhoto {
-    @include col($flex: 40%, $max-width: 40%);
+    @include col(40%, 40%, 1rem, 1rem);
     text-align: center;
+    @include mediaQuery(max-width, 767px) {
+      @include colResponsive(100%, 100%);
+      margin-bottom: 1rem;
+    }
   }
   &__resume {
-    @include col($flex: 60%, $max-width: 60%);
+    @include col(60%, 60%, 1rem, 1rem);
     color: $secondaryLight;
+    @include mediaQuery(max-width, 767px) {
+      @include colResponsive(100%, 100%);
+    }
   }
   &__personalInformationRow {
     @include row($margin-left: -1rem, $margin-right: -1rem);
     margin-bottom: 1rem;
+    @include mediaQuery(max-width, 1100px) {
+      flex-direction: column;
+    }
   }
   &__personalInformationCol {
     @include col(none, 100%, 1rem, 1rem);
@@ -40,7 +53,7 @@ About
     margin-right: 0.5rem;
   }
   &__button {
-    @include button($primaryLight, $primary, $primaryDark);
+    @include button($primary, $primaryDark, $primary);
   }
 }
 
@@ -59,7 +72,7 @@ body.light {
       color: $secondary;
     }
     &__button {
-      @include button($secondaryDark, $secondary, $primaryLight);
+      @include button($secondary, $primaryLight, $secondary);
     }
   }
 }
