--- a/src/styles/components/_experience.scss
+++ b/src/styles/components/_experience.scss
@@ -22,14 +22,19 @@ Experience
     }
   }
   &__leftContentRow {
-    @include row($margin-left: -3rem, $margin-right: -3rem);
+    @include row($margin-left: -1rem, $margin-right: -1rem);
+    .experience__contentCol {
+      @include col(50%, 50%, 1rem, 3rem);
+    }
   }
   &__rightContentRow {
-    @include row($margin-left: -3rem, $margin-right: -3rem);
+    @include row($margin-left: -1rem, $margin-right: -1rem);
     justify-content: flex-end;
+    .experience__contentCol {
+      @include col(50%, 50%, 3rem, 1rem);
+    }
   }
   &__contentCol {
-    @include col(50%, 50%, 3rem, 3rem);
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
