--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -12,7 +12,7 @@ Projects
   }
   &__contentCol {
     @include flexBox;
-    @include col(50%, 50%, 1rem, 1rem);
+    @include col(50%, 50%, 1rem, 1rem, max-width, 767px, 100%, 100%);
     margin-bottom: 2rem;
   }
   &__content {
