--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,7 +3,7 @@ Footer
 **********/
 .footer {
   background-color: $secondaryDark;
-  padding: 2rem;
+  padding: 2rem 0;
   &__content {
     color: $primaryLight;
     text-align: center;
