--- a/src/styles/base/_layouts.scss
+++ b/src/styles/base/_layouts.scss
@@ -7,4 +7,8 @@ Layouts
   margin-left: auto;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
+  @include mediaQuery(max-width, 650px) {
+    padding-right: 2rem;
+    padding-left: 2rem;
+  }
 }
