--- a/src/styles/components/_toggleTheme.scss
+++ b/src/styles/components/_toggleTheme.scss
@@ -25,7 +25,7 @@ ToggleTheme
   -webkit-transition: 0.4s;
 }
 .slider:before {
-  background: $primaryLight url('https://i.ibb.co/FxzBYR9/night.png');
+  background: $primaryLight url('./../../assets/dark.webp');
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 50%;
@@ -45,7 +45,7 @@ ToggleTheme
   background-color: $primary;
 }
 .themeToggle:checked + .slider:before {
-  background: $primaryLight url('https://i.ibb.co/7JfqXxB/sunny.png');
+  background: $primaryLight url('./../../assets/light.webp');
   background-repeat: no-repeat;
   background-position: center;
   -webkit-transform: translateX(22px);
