--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -2,11 +2,40 @@
 Navbar
 **********/
 .navbar {
+  &__inputMobileMenu {
+    display: none;
+    &:checked + .navbar__list {
+      display: flex;
+    }
+  }
+  &__labelMobileMenu {
+    color: $secondaryLight;
+    cursor: pointer;
+    font-size: 1.5rem;
+    @include mediaQuery(min-width, 768px) {
+      display: none;
+    }
+  }
   &__list {
     @include flexBox($breakpoint: 0);
     list-style: none;
     @include mediaQuery(max-width, 767px) {
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.8);
       display: none;
+      flex-direction: column;
+      justify-content: center;
+      left: 0;
+      min-height: 100vh;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: -1;
+    }
+  }
+  &__listItem {
+    @include mediaQuery(max-width, 767px) {
+      margin-bottom: 1.5rem;
     }
   }
   &__link {
@@ -16,6 +45,10 @@ Navbar
     &.active {
       color: $primary;
     }
+    @include mediaQuery(max-width, 767px) {
+      font-size: 1.25rem;
+      font-weight: 700;
+    }
   }
 }
 
@@ -24,6 +57,14 @@ Light theme navbar
 **********/
 body.light {
   & .navbar {
+    &__labelMobileMenu {
+      color: $secondaryDark;
+    }
+    &__list {
+      @include mediaQuery(max-width, 767px) {
+        background-color: rgba(255, 255, 255, 0.8);
+      }
+    }
     &__link {
       color: $primaryDark;
       &.active {
