--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -26,7 +26,7 @@ Navbar
       flex-direction: column;
       justify-content: center;
       left: 0;
-      min-height: calc(100vh - 4rem);
+      min-height: 100vh;
       position: absolute;
       right: 0;
       top: 0;
