--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -62,7 +62,7 @@ body.light {
     &__subtitles {
       color: $primaryDark;
     }
-    &__labels {
+    &__label {
       color: $primaryDark;
     }
     &__skillBar {
