--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -8,11 +8,9 @@ Services
     margin-bottom: 2rem;
   }
   &__contentRow {
-    @include row($margin-left: -1rem, $margin-right: -1rem);
+    @include grid($grid-template-columns: 3);
   }
   &__contentCol {
-    @include col(33.3%, 33.3%, 1rem, 1rem, max-width, 767px, 100%, 100%);
-    display: flex;
     &:not(:last-child) {
       @include mediaQuery(max-width, 767px) {
         margin-bottom: 2rem;
@@ -28,7 +26,7 @@ Services
     position: relative;
     &::before,
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       width: 0;
       box-sizing: border-box;
