--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -3,31 +3,19 @@ About
 **********/
 .about {
   &__content {
-    @include row($margin-left: -1rem, $margin-right: -1rem);
+    @include grid;
   }
   &__contentPhoto {
-    @include col(40%, 40%, 1rem, 1rem, max-width, 767px, 100%, 100%);
     text-align: center;
     @include mediaQuery(max-width, 767px) {
       margin-bottom: 2rem;
     }
   }
   &__resume {
-    @include col(60%, 60%, 1rem, 1rem, max-width, 767px, 100%, 100%);
     color: $secondaryLight;
   }
   &__personalInformationRow {
-    @include row(
-      $margin-left: -1rem,
-      $margin-right: -1rem,
-      $size: max-width,
-      $breakpoint: 1100px,
-      $flex-direction-responsive: column
-    );
     margin-bottom: 1rem;
-  }
-  &__personalInformationCol {
-    @include col(none, 100%, 1rem, 1rem, max-width, 767px, 100%, 100%);
   }
   &__title {
     color: $primary;
